--- a/submissions/thesis-original/evaluation/evaluation.tex
+++ b/submissions/thesis-original/evaluation/evaluation.tex
@@ -51,7 +51,7 @@ Unlike other forms of finance, like equity or derivatives trading, \gls{vc} oper
 
 An indicative time profile of the system is shown in Table~\ref{tab:evaluation:time_profile}. At the highest-level, this configuration of the program takes approximately 46 hours to complete on a modern desktop PC. When we further break this time down by system component, it's clear that the vast majority of time (84.8\%) is taken up by the initial pipeline creation component. This time is due to the pipeline optimisation process - the model is fit and scored over 500 times on different classification algorithms and parameters. Scoring takes a particularly long time because, in this case, it also involves generating learning curves for reporting, which is another cross-validated process. However, when placed into production, this component could be run infrequently - perhaps once per year - to ensure that the pipelines being used are still optimally suited for the dataset. The next component of the system, selecting the most robust pipeline, could occur more frequently - perhaps once every month - and the final component of the pipeline, making up-to-date predictions, could be evaluated every time new data is fed into the system (perhaps once per day) because it only takes an hour.
 
-\begin{table}[!htb] %Should include data collection too? 
+\begin{table}[!htb] %Should include data collection too?
     \centering
     \scalebox{0.9}{\input{../tables/evaluation/time_profile}}
     \caption[System time profile]{System time profile.}
@@ -114,7 +114,7 @@ We also looked at how company outcomes vary with respect to development stage, s
 
 %TODO
 
-Figure~\ref{fig:evaluation:performance_window} shows model performance across a range of metrics, grouped by forecast window. As discussed previously, we do not expect Area under the \gls{roc} curve to accurately reflect the performance of our model because it is not sensitive to our bias towards the positive class. We see that there is very little difference in Area under the \gls{roc} curve across the forecast windows. However, across all three other metrics, there is a clear positive relationship between length of forecast window and model performance. In particular, the F1 Score shows the greatest improvement in performance over time (52.7\%), compared to Area under the \gls{prc} curve (34.1\%) and \gls{mcc} (11.6\%), which probably reflects that our F1 Score here purely captures the positive class. 
+Figure~\ref{fig:evaluation:performance_window} shows model performance across a range of metrics, grouped by forecast window. As discussed previously, we do not expect Area under the \gls{roc} curve to accurately reflect the performance of our model because it is not sensitive to our bias towards the positive class. We see that there is very little difference in Area under the \gls{roc} curve across the forecast windows. However, across all three other metrics, there is a clear positive relationship between length of forecast window and model performance. In particular, the F1 Score shows the greatest improvement in performance over time (52.7\%), compared to Area under the \gls{pr} curve (34.1\%) and \gls{mcc} (11.6\%), which probably reflects that our F1 Score here purely captures the positive class.
 
 \begin{figure}[!htb]
     \centering
@@ -136,7 +136,7 @@ Figure~\ref{fig:evaluation:features_window} shows the standardised weights of fe
 
 %TODO
 
-Figure~\ref{fig:evaluation:performance_stage} shows F1 Scores grouped by developmental stage and fit method. First, we exmaine the baseline distribution and then the variation in performance by fit method. Model performance has a generally positive relationship with developmental stage. This may be a product of later stage companies having more complete feature vectors. The only deviation from this positive relationship is at Series D+, where there is a dip in performance. This may be because we consider Series D+ to be the highest stage of funding, so the model is effectively only predicting exits at this stage. To understand this phenomenon better, we decided to split the datasets into their developmental stages and fit the model onto each of these sub-datasets individually. Across the board, this results in a performance improvement. Pre-Seed companies make up most of our original dataset (X\%) so we see the smallest difference between methods for this stage. However, for Series D+ we see a significant difference in performance, suggesting that the features that predict Series D+ performance are likely different to those for earlier stages. 
+Figure~\ref{fig:evaluation:performance_stage} shows F1 Scores grouped by developmental stage and fit method. First, we exmaine the baseline distribution and then the variation in performance by fit method. Model performance has a generally positive relationship with developmental stage. This may be a product of later stage companies having more complete feature vectors. The only deviation from this positive relationship is at Series D+, where there is a dip in performance. This may be because we consider Series D+ to be the highest stage of funding, so the model is effectively only predicting exits at this stage. To understand this phenomenon better, we decided to split the datasets into their developmental stages and fit the model onto each of these sub-datasets individually. Across the board, this results in a performance improvement. Pre-Seed companies make up most of our original dataset (X\%) so we see the smallest difference between methods for this stage. However, for Series D+ we see a significant difference in performance, suggesting that the features that predict Series D+ performance are likely different to those for earlier stages.
 
 \begin{figure}[!htb]
     \centering
