--- a/submissions/thesis-original/thesis/thesis.tex
+++ b/submissions/thesis-original/thesis/thesis.tex
@@ -81,6 +81,8 @@
 \newacronym{iqr}{IQR}{Interquartile Range}
 \newacronym{svm}{SVM}{Support Vector Machine}
 \newacronym{ann}{ANN}{Artificial Neural Network}
+\newacronym{auc}{AUC}{Area Under Curve}
+\newacronym{mcc}{MCC}{Matthews Correlation Coefficient}
 
 % Fancyref support for subsections, source; https://github.com/openlilylib/tutorials/blob/master/aGervasoni/orchestralScores/example-materials/OLLbase.sty
 \newcommand*{\fancyrefsubseclabelprefix}{subsec}
