--- a/submissions/thesis-original/evaluation/evaluation.tex
+++ b/submissions/thesis-original/evaluation/evaluation.tex
@@ -1,4 +1,4 @@
-﻿\documentclass[../thesis/thesis.tex]{subfiles}
+\documentclass[../thesis/thesis.tex]{subfiles}
 \begin{document}
 
 \chapter{Evaluation}
