--- a/submissions/thesis-original/conclusions/conclusions.tex
+++ b/submissions/thesis-original/conclusions/conclusions.tex
@@ -1,31 +1,24 @@
 \documentclass[../thesis/thesis.tex]{subfiles}
 \begin{document}
+
  \chapter{Conclusions}
  \label{chap:conclusions}
 
-Our project's aim was to produce a \gls{vc} investment screening system that is efficient, robust and powerful. Our system uses online data sources and machine learning to identify startups that are likely to receive additional funding or exit in a given forecast window. While this is a challenging problem even for experienced \gls{vc} investors, we achieved classification results that have practical applications for \gls{vc} firms.
+Our project's aim was to produce a \gls{vc} investment screening system that is efficient, robust and powerful. Our system uses online data sources and machine learning to identify startups that are likely to receive additional funding or exit in a given forecast window. While this is a challenging problem even for experienced \gls{vc} investors, we achieved classification results that have practical application for \gls{vc} firms.
 
 \section{Evaluation of Criteria}
 
 \subsection{Efficiency}
 
-Our system intends to replace investment screening processes that currently involve referral, Google search, industry papers, and manual search of startup databases. These are inefficient processes when applied to screening for a small number of highly promising investment opportunities amongst thousands of potential candidates. By its nature, our automated system should be more efficient than these methods, because it requires less human input. We also evaluated the efficiency of our system on two facets: dataset size and time profile. 
-
-Our system is relatively robust to dataset size, because it optimises the classification pipeline based on the datasets available. In some cases, our system could use smaller training sets without significant reduction in predictive power. However, our system's ability to use smaller training sets was strongly related to the length of the desired forecast window, and the breadth of the target outcome. 
-
-We found that an indicative implementation of our system (data collection excluded) takes 46 hours to run, which is reasonable for a process that is not time-sensitive in this industry. The majority of this time is due to the pipeline creation process, followed by pipeline selection. However, the time taken by these processes is positively related to the stability of their results with respect to time. When placed into production, system components with longer durations could be run less frequently without a reduction in performance.
+Our system intends to replace manual investment screening (referral, Google search, industry papers, and manual search of startup databases). Our automated system should be more efficient than these methods because it requires less human input. We also evaluated our system's efficiency based on dataset size and time profile. Our system is relatively robust to dataset size, because it optimises the classification pipeline based on the datasets available. In some cases, our system could use smaller training sets without significant reduction in predictive power. However, our system's ability to use smaller training sets was related to the length of the desired forecast window, and the breadth of the target outcome. An indicative implementation of our system takes 46 hours to run, which is reasonable for a process that is not time-sensitive in this industry. The majority of this time is due to the pipeline optimisation process. However, when placed into production, this could be run less frequently with minimal reduction in performance.
 
 \subsection{Robustness}
 
-The \gls{vc} industry is concerned that predictive models trained on historical data will not accurately predict future trends and activity. This has been identified as a key barrier to the adoption of automated systems by the \gls{vc} industry \cite{stone2014}. Therefore, it is critical that our system is shown to be robust in its performance with respect to time so investors can rely on its predictions. 
-
-We evaluated our system across a number of historical datasets, forecast windows, and even multiple evaluation metrics. We found variance across all evaluation metrics to be very low, with slightly more variance over shorter forecast windows. When we explored the feature weights for each model developed on different historical datasets, we found only slight variance. This suggests that our system produces highly robust models, suitable for forward-looking investment screening.
+Our system must be robust robust in its performance with respect to time so investors can rely on its predictions. The \gls{vc} industry is concerned that predictive models trained on historical data will not accurately predict future trends and activity. This has been identified as a key barrier to the adoption of automated systems by the \gls{vc} industry \cite{stone2014}. We evaluated our system across a number of historical datasets, forecast windows, and even multiple evaluation metrics. We found variance across all evaluation metrics to be very low, with slightly more variance over shorter forecast windows. When we explored the feature weights for each model developed on different historical datasets, we found only slight variance. This suggests that our system produces highly robust models, suitable for forward-looking investment screening.
 
 \subsection{Predictive Power}
 
-Our system must be consistently accurate at identifying a variety of high-potential investment candidates. We evaluated the systems' predictive power based on its ability to predict over different forecast windows (e.g. 2-4 years), for target companies at different developmental stages (e.g. Seed, Series A etc.), and for different target outcomes (e.g. predicting additional funding rounds, being acquired, having an IPO, or some combination thereof).
-
-
+Our system must be accurate at identifying a variety of high-potential investment candidates. We evaluated the systems' predictive power based on its ability to predict over different forecast windows (e.g. 2-4 years), for target companies at different developmental stages (e.g. Seed, Series A etc.), and for different target outcomes (e.g. predicting additional funding rounds). Forecast window has an impact on our system's performance. Our system produced F1 Scores of 0.36, 0.48 and 0.55 for forecast windows of 2, 3 and 4 years. In the future, it would be interesting to also explore forecast windows that are closer in duration to a typical \gls{vc} investment horizon (5-8 years). Our system's performance has a positive relationship with developmental stage, producing F1 Scores ranging from 0.33 for Pre-Seed companies through to 0.62 for Series C companies. When we fit models separately to each stage, we see a performance improvement (+0.03), and particularly for Series D+ companies (0.53 to 0.66). Finally, our system varies in its performance at predicting target outcomes, producing F1 Scores ranging from 0.51 for predicting additional funding through to 0.24 for predicting an IPO.
 
 \section{Future Research}
 
@@ -40,11 +33,11 @@ Our system must be consistently accurate at identifying a variety of high-potent
 
 \subsection{Systems Integration}
 
-We originally developed a collector that connected to CrunchBase’s API, providing real-time and comprehensive access to their database. Although we ultimately abandoned this approach because of the time constraints of this research project, it deserves further investigation. In terms of producing a system that is truly practical for \gls{vc} firms to use day-to-day, continuous data integration is an important feature.  The dataset could be continuously updated and incrementally fed into the classification pipeline to a) ensure that the dataset is up-to-date and b) provide more granular temporal analysis of trends in the dataset.
+We developed a connector to CrunchBase’s API that provided real-time and comprehensive access to their database. Although we abandoned this approach because of the time constraints of this research project, it deserves further investigation. In terms of producing a system that is practical for \gls{vc} firms to use day-to-day, continuous data integration is an important feature. The dataset could be continuously updated and incrementally fed into the classification pipeline to a) ensure that the dataset is up-to-date and b) provide more granular temporal analysis of trends in the dataset.
 
 \section{Summary}
 
-In this work, a methodology is presented that produces a \gls{vc} investment screening system that is efficient, robust and predictive. Existing approaches in the literature to predict startup performance have three common limitations: small sample size, a focus on very early-stage investment, and incomplete use of features. In addition, there is little evidence that previous research has translated into systems that assist investors directly. This project addressed these issues and contributed groundwork for future investigation by researchers and investors towards greater automation of the \gls{vc} industry.
+We produced a \gls{vc} investment screening system that is efficient, robust and predictive. Existing approaches in the literature to predict startup performance have three common limitations: small sample size, a focus on very early-stage investment, and incomplete use of features. In addition, there is little evidence that previous research has translated into systems that assist investors directly. This project addressed these issues and lays the groundwork for an industry-ready \gls{vc} investment screening tool.
 
- \ifcsdef{mainfile}{}{\bibliography{../references/primary}}
+ \ifcsdef{mainfile}{}{\printbibliography}
 \end{document}
