sped up patent collection

--- a/submissions/thesis-original/discussion/discussion.tex
+++ b/submissions/thesis-original/discussion/discussion.tex
@@ -6,27 +6,42 @@
 
 %TODO
 
-\section{Design}
+\begin{enumerate}
+\item System Design. %TODO
+\item System Performance. %TODO
+\item Model Evaluation. %TODO
+\end{enumerate}
 
-\subsection{Criteria Selection}
-\subsection{Feature Selection}
-\subsection{Data Sources}
-%CrunchBase
-%PatentsView
-\subsection{Classification Algorithms}
-%Good - Random Forests / Logistic Regression
-%Bad - SVM, ANN, KNN
+\section{System Design} %TODO
 
-\section{Theory}
+\subsection{Contributions} %TODO
 
-\subsection{Efficiency}
-\subsection{Robustness}
-\subsection{Forecast Window}
-\subsection{Developmental Stage}
-\subsection{Target Outcome}
+\subsubsection{Data Collection} %TODO
+\subsubsection{Pipeline Creation} %TODO
+\subsubsection{Pipeline Selection} %TODO
 
-\subsubsection{Case Studies}
+\subsection{Limitations} %TODO
 
+\subsubsection{Technique Bias} %TODO
+\subsubsection{Computational Power} %TODO
+\subsubsection{Autonomy} %TODO
+
+\section{System Performance} %TODO
+
+\subsection{Contributions} %TODO - inc. Beckwith2016, Stone2014, Bhat2011
+
+\subsubsection{Time Slices} %TODO
+\subsubsection{Forecast Window} %TODO
+\subsubsection{Developmental Stage} %TODO
+\subsubsection{Target Outcome} %TODO
+
+\subsection{Limitations} %TODO
+
+\subsubsection{Configuration} %TODO
+\subsubsection{Decision-Making} %TODO
+\subsubsection{Outcome Nuances}
+
+%TODO - additional preamble
 We present four case studies to highlight the nuances of our system's performance, as shown in Table~\ref{tab:evaluation:example_predictions}.
 
 \begin{table}[!htb]
@@ -45,6 +60,21 @@ We present four case studies to highlight the nuances of our system's performanc
 \item Fab is a New York-based e-commerce startup, launched in 2009. Fab raised \$171m according to CrunchBase records, from reputable investors like Andreessen Horowitz, Mayfield Fund and First Round Capital, and once was reportedly valued at more than \$1 billion. Our system predicted that Fab would raise funds or exit within the period of April 2013-2017. Later in 2013, Fab completed a Series D round for \$150m. In 2015, Fab was acquired by PCH, reportedly for only a sum of \~\$20m. In this case, our system was technically accurate: Fab both raised funds and completed an exit. However, this exit was not a success for investors.
 
 \item Mixpanel is a California-based consumer analytics platform, launched in 2009. Mixpanel came out of famed startup accelerator Y-Combinator and raised \$12m from Seed - Series A rounds up to 2012, from reputable \gls{vc} firms and angels like Sequoia Capital, Andreessen Horowitz and Max Levchin. Our system predicted that Mixpanel would raise funds or exit within the period of April 2013-2017.  Mixpanel went on to raise a \$65m Series B round from Andreessen Horowitz in December 2014 that valued the ccompany at \$865m. Despite some stumbles in 2016, where MixPanel had to cut 20 staff (primarily in sales), it still appears to have a generally positive outlook. This was a good prediction by our system.
+
+\section{Model Evaluation} %TODO
+
+\subsection{Contributions} %TODO
+
+\subsubsection{Time Slices} %TODO
+\subsubsection{Forecast Window} %TODO
+\subsubsection{Developmental Stage} %TODO
+\subsubsection{Target Outcome} %TODO
+
+\subsection{Limitations} %TODO
+
+\subsubsection{Missing Features} %TODO
+\subsubsection{Homogeneous Features} %TODO
+\subsubsection{Simple Structure} %TODO
 
 \end{enumerate}
 
