--- a/submissions/thesis-original/conclusions/conclusions.tex
+++ b/submissions/thesis-original/conclusions/conclusions.tex
@@ -20,18 +20,12 @@ Our system must be robust robust in its performance with respect to time so inve
 
 Our system must be accurate at identifying a variety of high-potential investment candidates. We evaluated the systems' predictive power based on its ability to predict over different forecast windows (e.g. 2-4 years), for target companies at different developmental stages (e.g. Seed, Series A etc.), and for different target outcomes (e.g. predicting additional funding rounds). Forecast window has an impact on our system's performance. Our system produced F1 Scores of 0.36, 0.48 and 0.55 for forecast windows of 2, 3 and 4 years. In the future, it would be interesting to also explore forecast windows that are closer in duration to a typical \gls{vc} investment horizon (5-8 years). Our system's performance has a positive relationship with developmental stage, producing F1 Scores ranging from 0.33 for Pre-Seed companies through to 0.62 for Series C companies. When we fit models separately to each stage, we see a performance improvement (+0.03), and particularly for Series D+ companies (0.53 to 0.66). Finally, our system varies in its performance at predicting target outcomes, producing F1 Scores ranging from 0.51 for predicting additional funding through to 0.24 for predicting an IPO.
 
-\section{Future Research}
+\section{Future Research} %TODO
 
-\subsection{Network Analysis}
-
-
-\subsection{Temporal Analysis}
-
-
-\subsection{Semantic Text Analysis}
-
-
-\subsection{Systems Integration}
+\subsection{Network Analysis} %TODO
+\subsection{Temporal Analysis} %TODO
+\subsection{Semantic Text Analysis} %TODO
+\subsection{Systems Integration} %TODO
 
 We developed a connector to CrunchBase’s API that provided real-time and comprehensive access to their database. Although we abandoned this approach because of the time constraints of this research project, it deserves further investigation. In terms of producing a system that is practical for \gls{vc} firms to use day-to-day, continuous data integration is an important feature. The dataset could be continuously updated and incrementally fed into the classification pipeline to a) ensure that the dataset is up-to-date and b) provide more granular temporal analysis of trends in the dataset.
 
